infrastructure/base/apps/minio/networkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9000"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "9000"
            - port: "9001"
# ---
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: allow-ingress-from-velero
# spec:
#   endpointSelector:
#     matchLabels:
#       io.cilium.k8s.policy.serviceaccount: minio
#   ingress:
#     - fromEndpoints:
#         - matchLabels:
#             io.cilium.k8s.policy.serviceaccount: velero-server
#             io.kubernetes.pod.namespace: velero
#       toPorts:
#         - ports:
#             - port: "9000"
---
# ToDo: check if this NetworkPolicy is really needed
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-postgres-operator
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: postgres-operator
            io.kubernetes.pod.namespace: postgres-operator
      toPorts:
        - ports:
            - port: "9000"
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: backup
            io.kubernetes.pod.namespace: mariadb
      toPorts:
        - ports:
            - port: "9000"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-postgres-operator-ui
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: postgres-operator-ui
            io.kubernetes.pod.namespace: postgres-operator-ui
      toPorts:
        - ports:
            - port: "9000"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-postgres-cluster
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: postgres-pod
            io.kubernetes.pod.namespace: postgres-cluster
      toPorts:
        - ports:
            - port: "9000"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-minio
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: minio
  egress:
    - toFQDNs:
        - matchName: subnet.min.io
        - matchName: dl.min.io
      toPorts:
        - ports:
            - port: "443"
